<resources>
    <string name="app_name">ProjectApp</string>
    <string name="cover">cover</string>
    <string name="star">star</string>

    <string name="genre">Genre :</string>
    <string name="sinopsis">Sinopis :</string>
    <string name="penerbit">Penerbit :</string>
    <string name="pengarang">Pengarang :</string>

    <string name="fullmetal_alchemist">FullMetal Alchemist</string>
    <string name="rating_fmabh">9.1</string>
    <string name="sinopsis_fmabh">Edward Elric dan Alphonse Elric awalnya hidup bahagia dengan orang tua mereka. Tetapi karena pekerjaan ayahnya adalah alkemist (ahli kimia), ayahnya yang bernama Van Hohenheim sering bepergian keluar rumah, sehingga Ed dan Al hanya tinggal bersama ibunya, Trisha Elric. Karena terlalu lelah mengurus rumah sendirian, Trisha jatuh sakit dan akhirnya meninggal. Ed dan Al yang saat itu masih kecil, namun sudah mewarisi bakat ayahnya sebagai alkemist mencoba menghidupkan kembali sang ibu. Namun, usaha mereka gagal. Tubuh Al dan kaki kiri Ed diambil sebagai “biaya masuk” karena transmutasi manusia adalah hal tabu dalam alkimia. Ed yang panik akhirnya memindahkan roh Al ke dalam baju zirah dengan bayaran tangan kanannya. \n\nDi tengah keputusasaannya, Ed mendapat tawaran untuk menjadi seorang alchemist kenegaraan (State Alchemist). setelah mempertimbangkan keuntungan memperoleh berbagai hak istimewa sehingga ia bisa menyelidiki dan mencari cara untuk mengembalikan tubuh mereka, Ed menerima tawaran itu. Tangan dan kaki Ed pun diganti dengan automail. Setelah itu, Ed mengikuti tes ujian alchemist kenegaraan dan lulus sebagai alchemist kenegaraan termuda dalam sejarah dan mendapat julukan Fullmetal Alchemist. Bersama dengan Al, dimulailah petualangan Ed guna mencari cara untuk mengembalikan tubuh mereka.</string>
    <string name="penerbit_fmabh">Square Enix</string>
    <string name="pengarang_fmabh">Hiromu Arakawa</string>
    <string name="genre_fmabh">Fiksi petualangan, Fantasi, Steampunk, Dieselpunk</string>
    <string name="rilis_fmabh">4 Oktober 2003</string>
    <string name="preview_img">preview_img</string>
    <string name="btn_addToFav">ADD TO FAVORITE</string>

</resources>