<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/custom_282222">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/cover"
            android:contentDescription="@string/cover"
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:scaleType="fitXY"
            android:src="@drawable/fmabh_cover"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cover">

            <TextView
                android:id="@+id/judul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:fontFamily="@font/inter_bold"
                android:text="@string/fullmetal_alchemist"
                android:textColor="@color/white"
                android:textSize="26sp" />

            <TextView
                android:id="@+id/tanggal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/judul"
                android:layout_alignParentStart="true"
                android:fontFamily="@font/inter"
                android:text="@string/rilis_fmabh"
                android:textColor="@color/white"
                android:textStyle="italic"
                android:textSize="12sp"
                />

            <ImageView
                android:id="@+id/star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="56dp"
                android:layout_marginEnd="10dp"
                android:layout_toStartOf="@+id/rating"
                android:layout_toEndOf="@+id/judul"
                android:contentDescription="@string/star"
                android:src="@drawable/star" />

            <TextView
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:text="@string/rating_fmabh"
                android:textColor="@color/custom_FFF62B" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_bold"
                android:text="@string/genre"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter"
                android:text="@string/genre_fmabh"
                android:textColor="@color/white"
                android:textSize="14sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_bold"
                android:layout_marginTop="20dp"
                android:text="@string/pengarang"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter"
                android:text="@string/pengarang_fmabh"
                android:textColor="@color/white"
                android:textSize="14sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_bold"
                android:layout_marginTop="20dp"
                android:text="@string/penerbit"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter"
                android:text="@string/penerbit_fmabh"
                android:textColor="@color/white"
                android:textSize="14sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_bold"
                android:layout_marginTop="20dp"
                android:text="@string/sinopsis"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter"
                android:text="@string/sinopsis_fmabh"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <HorizontalScrollView
            android:id="@+id/preview"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            app:layout_constraintTop_toBottomOf="@+id/content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="25dp">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:contentDescription="@string/preview_img"
                    android:layout_width="300dp"
                    android:layout_height="150dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/fmabh_img1"
                    android:layout_marginHorizontal="10dp"/>
                <ImageView
                    android:contentDescription="@string/preview_img"
                    android:layout_width="300dp"
                    android:layout_height="150dp"
                    android:scaleType="centerCrop"
                    android:layout_marginHorizontal="10dp"
                    android:src="@drawable/fmabh_img1"/>
                <ImageView
                    android:contentDescription="@string/preview_img"
                    android:layout_width="300dp"
                    android:layout_height="150dp"
                    android:scaleType="centerCrop"
                    android:layout_marginHorizontal="10dp"
                    android:src="@drawable/fmabh_img1"/>
                <ImageView
                    android:contentDescription="@string/preview_img"
                    android:layout_width="300dp"
                    android:layout_height="150dp"
                    android:scaleType="centerCrop"
                    android:layout_marginHorizontal="10dp"
                    android:src="@drawable/fmabh_img1"/>

            </LinearLayout>
        </HorizontalScrollView>
        <Button
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:text="@string/btn_addToFav"
            android:layout_marginVertical="50dp"
            android:backgroundTint="@color/teal_700"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/preview"
            app:layout_constraintBottom_toBottomOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>